--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "apidoc-example",
-  "version": "0.1.7",
-  "description": "Examples and test fixtures for apidoc.",
-  "author": "Peter Rottmann <rottmann@inveris.de>",
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/apidoc/apidoc-example/blob/master/LICENSE"
-  },
+  "name": "apifork-example",
+  "version": "0.1.10",
+  "description": "Examples and test fixtures for apifork.",
+  "author": "Nick Shvelidze <captain@pirrate.mee>",
+  "license": "MIT",
   "main": "./index.js",
-  "homepage": "http://apidocjs.com",
+  "homepage": "https://github.com/shvelo/apifork-example",
   "repository": {
     "type": "git",
-    "url": "https://github.com/apidoc/apidoc-example.git"
+    "url": "https://github.com/shvelo/apifork-example.git"
   }
 }
